actualizando con julian

--- a/InsuranceCalculator.Web/src/app/pages/home/dashboard/dashboard.component.html
+++ b/InsuranceCalculator.Web/src/app/pages/home/dashboard/dashboard.component.html
@@ -1,1 +1,26 @@
-<p>dashboard works!</p>
+<div class="welcome-container">
+  <header class="welcome-header">
+    <h1>Bienvenido al Simulador de Seguros QAP</h1>
+    <p>La herramienta definitiva para calcular y comparar seguros de manera rápida y sencilla.</p>
+  </header>
+
+  <section class="contact-section">
+    <h2>Datos de Contacto</h2>
+    <div class="contact-info">
+      <div class="contact-item">
+        <mat-icon class="contact-icon">phone</mat-icon>
+        <p><strong>Teléfono:</strong> 317 6417946</p>
+      </div>
+      <div class="contact-item">
+        <mat-icon class="contact-icon">email</mat-icon>
+        <p><strong>Email:</strong> qapseguros&#64;gmail.com</p>
+      </div>
+      <div class="contact-item">
+        <mat-icon class="contact-icon">location_on</mat-icon>
+        <p><strong>Dirección:</strong> Carrera 33 # 47 - 34 oficinas 122 Centro Comercial
+          Altamonte Bucaramanga, Colombia
+          </p>
+      </div>
+    </div>
+  </section>
+</div>
