--- a/InsuranceCalculator.Web/src/app/pages/home/home/home.component.html
+++ b/InsuranceCalculator.Web/src/app/pages/home/home/home.component.html
@@ -1,7 +1,12 @@
 <mat-sidenav-container class="dashboard-container">
   <!-- Sidebar -->
   <mat-sidenav mode="side" opened>
-    <mat-toolbar color="primary">Seguros QAP</mat-toolbar>
+    <mat-toolbar color="primary" class="encabezado">
+      <div class="logo-container">
+        <img src="/logos/logo-qap.png" alt="Logo de Seguros QAP" class="logo">
+        <span class="company-name">Seguros QAP</span>
+      </div>
+    </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/home/dashboard" routerLinkActive="active-link">
         <mat-icon>home</mat-icon>
@@ -23,10 +28,11 @@
     <!-- Header -->
     <mat-toolbar color="primary">
       <span>{{ pageTitle || 'Inicio' }}</span>
-      <span class="spacer"></span>
-      <mat-icon>search</mat-icon>
-      <mat-icon>notifications</mat-icon>
-      <mat-icon>account_circle</mat-icon>
+      <span class="spacer"></span> <!-- Este span empuja el botón a la izquierda -->
+      <button type="button" mat-button (click)="toLogin()" class="logout-button">
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Cerrar sesión</span>
+      </button>
     </mat-toolbar>
 
     <!-- Contenedor dinámico -->
